--- a/layouts/partials/search.html
+++ b/layouts/partials/search.html
@@ -1,5 +1,12 @@
 <div class="search-bg">
   <div id="outerSearchBox">
-    <input type="search" class="search" aria-label="Search the directory">
+    <input
+      type="search"
+      class="search"
+      aria-label="Search the directory"
+      placeholder="Search websites by name, URL or method (e.g. 2fa:totp)"
+      autocomplete="off"
+      spellcheck="false"
+    />
   </div>
 </div>
