--- a/layouts/partials/search.html
+++ b/layouts/partials/search.html
@@ -4,7 +4,7 @@
       type="search"
       class="search"
       aria-label="Search the directory"
-      placeholder="Search websites by name, URL or method (e.g. 2fa:totp)"
+      placeholder="Search websites by name, URL or method"
       autocomplete="off"
       spellcheck="false"
     />
